# KinectFusionApp

./: .gitignore  CMakeLists.txt
cmake/: FindOpenNI2.cmake
cmake/templates/: depth_camera_config.h.in
include/: depth_camera.h
src/: depth_camera.cpp  main.cpp
